<resources>
    <string name="app_name">Camistry</string>

    <string name="title_bio">Bio</string>
    <string name="title_interests">Interests</string>
    <string name="title_basic_info">Basic info</string>
    <string name="title_lifestyle">Lifestyle</string>
    <string name="title_profile">Profile</string>
    <string name="title_discover">Discover</string>
    <string name="title_connections">Connections</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_subscription">Subscription</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_logout">Logout</string>
    
    <string name="text_forgot_password">Forgot password?</string>

    <string name="placeholder_bio">Here comes the biography…</string>
    <string name="placeholder_interests">Interest</string>
    <string name="placeholder_firstname">First name</string>
    <string name="placeholder_age">Age</string>
    <string name="placeholder_icon">Icon</string>
    <string name="placeholder_height">Height</string>
    <string name="placeholder_gender">Gender</string>
    <string name="placeholder_orientation">Orientation</string>
    <string name="placeholder_languages">Languages</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_smokes">Smokes</string>
    <string name="placeholder_drinks">Drinks</string>
    <string name="placeholder_has_pets">Has Pets</string>
    <string name="placeholder_wants_children">Wants Children</string>
    <string name="placeholder_email">E-mail</string>
    <string name="placeholder_password">Password</string>

    <string name="description_image_first">First photo on the dating profile.</string>
    <string name="description_nav_icon">Open navigation menu.</string>
    <string name="description_user_icon">Open user profile.</string>
    <string name="description_menu_list">List of menu items.</string>
    <string name="description_go_next">Go to the next page.</string>

    <string name="button_like">Like</string>
    <string name="button_dislike">Pass</string>
    <string name="button_login">Sign in</string>
    <string name="button_signup">Sign up</string>
    <string name="button_register">Register</string>
    <string name="button_signin_instead">Already have an account? Sign in.</string>

    <string name="label_height">Height:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_orientation">Orientation:</string>
    <string name="label_languages">Languages:</string>
    <string name="label_location">Location:</string>
    <string name="label_smokes">Smokes:</string>
    <string name="label_drinks">Drinks:</string>
    <string name="label_has_pets">Has Pets:</string>
    <string name="label_wants_children">Wants Children:</string>

    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="education">Education</string>
    <string name="job_title">Job Title</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="name_and_age">Name and Age</string>
    <string name="education_and_job">Education and Job</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="intention">Intention</string>
    <string name="languages">Languages</string>
    <string name="location">Location</string>
    <string name="interests">Interests</string>
    <string name="select_location">Select location</string>
    <string name="languages_and_location">Languages and Location</string>
    <string name="height_orientation_intention">Height, Orientation and Intentions</string>
    <string name="enter_your_interests_comma_separated">Enter your interests (comma separated)</string>
    <string name="you_and_your_match_have_liked_each_other">You and your match have liked each other.</string>
    <string name="you_have_a_new_match">You have a new match!</string>
</resources>