<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_background_violet">

    <TextView
        style="@style/ContentLabelText"
        android:id="@+id/tv_basic_info_tag"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/content_label_height"
        android:layout_marginStart="@dimen/content_label_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/content_label_margin"
        android:background="@color/secondary_text_coral"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title_basic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_basic_info_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_label_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/content_label_margin"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_gray_rounded"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_basic_info_tag">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ContentLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:text="@string/label_height"
                android:textStyle="bold" />

            <TextView
                style="@style/ContentLabelText"
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_height"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ContentLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:text="@string/label_gender"
                android:textStyle="bold" />

            <TextView
                style="@style/ContentLabelText"
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_gender"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ContentLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:text="@string/label_orientation"
                android:textStyle="bold" />

            <TextView
                style="@style/ContentLabelText"
                android:id="@+id/tv_orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_orientation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ContentLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:text="@string/label_languages"
                android:textStyle="bold" />

            <TextView
                style="@style/ContentLabelText"
                android:id="@+id/tv_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_languages"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ContentLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:text="@string/label_location"
                android:textStyle="bold" />

            <TextView
                style="@style/ContentLabelText"
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_location" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>