<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_registration"
    app:startDestination="@id/nameAgeFragment">

    <fragment
        android:id="@+id/nameAgeFragment"
        android:name="com.nathan.camistry.ui.register.NameAgeGenderFragment"
        android:label="@string/name_and_age">
        <action
            android:id="@+id/action_nameAge_to_educationJob"
            app:destination="@id/educationJobFragment" />
    </fragment>

    <fragment
        android:id="@+id/educationJobFragment"
        android:name="com.nathan.camistry.ui.register.JobEducationFragment"
        android:label="@string/education_and_job">
        <action
            android:id="@+id/action_educationJob_to_heightOrientationIntention"
            app:destination="@id/heightOrientationIntentionFragment" />
    </fragment>

    <fragment
        android:id="@+id/heightOrientationIntentionFragment"
        android:name="com.nathan.camistry.ui.register.HeightOrientationIntentionFragment"
        android:label="@string/height_orientation_intention">
        <action
            android:id="@+id/action_heightOrientationIntention_to_languagesLocation"
            app:destination="@id/languagesLocationFragment" />
    </fragment>

    <fragment
        android:id="@+id/languagesLocationFragment"
        android:name="com.nathan.camistry.ui.register.LanguagesLocationFragment"
        android:label="@string/languages_and_location">
    </fragment>



</navigation>