<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_background_violet">

    <TextView
        android:id="@+id/tv_lifestyle_tag"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/content_label_height"
        android:layout_marginStart="@dimen/content_label_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/content_label_margin"
        android:background="@color/secondary_text_coral"
        android:fontFamily="serif"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/title_lifestyle"
        android:textColor="@color/primary_text_platinum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_lifestyle_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_label_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/content_label_margin"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_gray_rounded"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lifestyle_tag">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:fontFamily="serif"
                android:text="@string/label_smokes"
                android:textColor="@color/primary_text_platinum" />

            <TextView
                android:id="@+id/tv_smokes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/placeholder_smokes"
                android:textColor="@color/primary_text_platinum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:fontFamily="serif"
                android:text="@string/label_drinks"
                android:textColor="@color/primary_text_platinum" />

            <TextView
                android:id="@+id/tv_drinks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/placeholder_drinks"
                android:textColor="@color/primary_text_platinum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:fontFamily="serif"
                android:text="@string/label_has_pets"
                android:textColor="@color/primary_text_platinum" />

            <TextView
                android:id="@+id/tv_has_pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/placeholder_has_pets"
                android:textColor="@color/primary_text_platinum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/content_label_margin_right"
                android:fontFamily="serif"
                android:text="@string/label_wants_children"
                android:textColor="@color/primary_text_platinum" />

            <TextView
                android:id="@+id/tv_wants_children"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/placeholder_wants_children"
                android:textColor="@color/primary_text_platinum" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>