<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background_violet">

    <TextView
        android:id="@+id/tv_app_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/serif_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/secondary_text_coral"
        android:textSize="@dimen/login_title_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_overlay"
        android:fontFamily="@font/serif_bold_italic"
        android:padding="@dimen/login_field_padding"
        android:text="@string/button_login"
        android:textAllCaps="false"
        android:textColor="@color/primary_text_platinum"
        android:textSize="@dimen/login_field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/tv_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/OverlayButtonStyle"
        android:layout_width="wrap_content"
        android:drawableStart="@drawable/ic_arrow_right"
        android:contentDescription="@string/description_go_next"
        app:layout_constraintBottom_toTopOf="@+id/tv_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_field_margin"
        android:layout_marginEnd="@dimen/login_field_margin"
        android:hint="@string/placeholder_email"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_gray_rounded"
        android:ems="10"
        android:fontFamily="@font/serif_italic"
        android:inputType="textEmailAddress"
        android:padding="@dimen/login_field_padding"
        android:textSize="@dimen/login_field_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/login_field_margin"
        android:layout_marginEnd="@dimen/login_field_margin"
        android:autofillHints="password"
        android:background="@drawable/bg_gray_rounded"
        android:ems="10"
        android:fontFamily="@font/serif_italic"
        android:hint="@string/placeholder_password"
        android:inputType="textPassword"
        android:padding="@dimen/login_field_padding"
        android:textSize="@dimen/login_field_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/tv_forgot_password"
        style="@style/ContentLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password"
        android:textSize="@dimen/login_subtitle_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_signup"
        style="@style/ContentLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:textSize="@dimen/login_subtitle_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_label_email"
        style="@style/ContentLabelText"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:labelFor="@id/et_email"
        android:text="@string/placeholder_email"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name2"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/tv_label_email2"
        style="@style/ContentLabelText"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:labelFor="@id/et_password"
        android:text="@string/placeholder_password"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintVertical_bias="0.772" />

</androidx.constraintlayout.widget.ConstraintLayout>